--- a/Code/EasyLease/src/main/webapp/user/homePageJSP.css
+++ b/Code/EasyLease/src/main/webapp/user/homePageJSP.css
@@ -46,14 +46,13 @@ select{
     background-color: #FFFFFF;
     border-radius: 0;
     margin-right: 1%;
+    margin-left: 1%;
     width: 20%;
     padding: 0.9em 3.5em 0.9em 0.9em;
     font-size: 0.9em;
     color: black;
 }
-.Ricerca{
-    margin-top:10%;
-}
+
 .cerca{
     padding:1em 2em;
     background-color: darkred;
