Modifica dei bug riportati
Modifica di:
1. RequestEstimateSerlvet (non aveva nulla nel doPost);
2. requestEstimateJSP.css (il colore del bottone era sbagliato)
3. headerJSP.jsp e headerJSP.css (sostituzione immagine logo, colore sbagliato e bug grafico del dropdown)
4. FooterJSP (non leggeva alcuni caratteri)
5. ImageSlideshow (risoluzione bug grafici)

--- a/Code/EasyLease/src/main/webapp/client/requestEstimateJSP.css
+++ b/Code/EasyLease/src/main/webapp/client/requestEstimateJSP.css
@@ -14,11 +14,11 @@
 
 .RequestEstimateForm>h1{
     padding: 0.5em 1em 1em;
-    color: darkred;
+    color: #9B334E;
 }
 
 .EstimateButton{
-    background-color: darkred;
+    background-color: #9B334E;
     border: none;
     color: white;
     padding: 1em 6em;
