--- a/Code/EasyLease/src/main/webapp/user/ImageSlideshow.css
+++ b/Code/EasyLease/src/main/webapp/user/ImageSlideshow.css
@@ -4,7 +4,7 @@
     position: relative;
     overflow: hidden;
     background: white;
-    color: darkred;
+    color: #9B334E;
     text-align: center;
 }
 
@@ -21,7 +21,7 @@ label {
     top: 0;
     left: 100%;
     z-index: 10;
-    padding: 8em 0px;
+    padding: 0;
     background-color: white;
     background-position: 50% 50%;
     background-size: cover;
@@ -45,7 +45,7 @@ header {
 
 .navImg {
     position: absolute;
-    top: 50%;
+    top: 90%;
     margin-top: -42px;
     z-index: 900;
     width: 100%;
@@ -83,15 +83,15 @@ header label:hover { background: #2e353b; }
 }
 
 .carContainer{
-    color:darkred;
+    color:#9B334E;
     text-decoration: none;
+    margin-top: -82px;
 }
 a:hover{
     text-decoration: none;
 }
 
 .carContainer>img{
-    margin-top:-13%;
 }
 
 [id^="slide"]:checked + .slide h1 {
