--- a/Code/EasyLease/src/main/webapp/user/homePageJSP.css
+++ b/Code/EasyLease/src/main/webapp/user/homePageJSP.css
@@ -1,4 +1,3 @@
-
 .flex {
     display: flex;
     flex-flow: row wrap;
@@ -41,7 +40,7 @@ img{
 }
 
 select{
-    border: 2px solid darkred;
+    border: 2px solid #9B334E;
     outline: none;
     background-color: #FFFFFF;
     border-radius: 0;
@@ -55,7 +54,7 @@ select{
 
 .cerca{
     padding:1em 2em;
-    background-color: darkred;
+    background-color: #9B334E;
     font-family: sans-serif;
     border:none;
     border-radius: 2px;
