aggiornato CSS file updateCarCSS.css
file versione 3
modificato per far adattare al meglio la pagina alle dimensioni dello schermo

--- a/Code/EasyLease/src/main/webapp/admin/updateCarCSS.css
+++ b/Code/EasyLease/src/main/webapp/admin/updateCarCSS.css
@@ -13,7 +13,7 @@
         border-bottom: solid #9b334e;
     }
     .autoName{
-        width: 30%;
+        width: 50%;
         font-size: 5vw;
         background: none;
         border: none;
@@ -137,7 +137,7 @@
         border-bottom: solid #9b334e;
     }
     .autoName{
-        width: 30%;
+        width: 50%;
         font-size: 5vw;
         background: none;
         border: none;
@@ -248,19 +248,19 @@
 
 @media (min-width: 831px) and (orientation: landscape){
     hr{
-        border: 1px solid #dec717;
-        width: 50%;
-        alignment: left;
-        margin-left: 10%;
-        position: absolute;
-        bottom: 20%;
+        border: medium solid #dec717; !important;
+        width: 50%; !important;
+        alignment: left; !important;
+        margin-left: 10%; !important;
+        position: absolute; !important;
+        bottom: 21%; !important;
     }
     label.carDetail{
-        font-size: 1.5vw;
+        font-size: 1vw;
     }
     .autoName{
-        width: 15%;
-        font-size: 2vw;
+        width: 20%;
+        font-size: 2.3vw;
         background: none;
         border: none;
         border-bottom: solid #dec717;
@@ -269,16 +269,16 @@
 
     table.characteristics{
         position: absolute;
-        top: 20.5%;
+        top: 17%;
         right: 1%;
         background: #9b334e;
-        width: 35%;
-        height: 59%;
-        margin-bottom: 2px;
+        width: 30%;
+        height: 51%;
         border-right: medium solid #dec717;
         border-top: medium solid #dec717;
         border-bottom: medium solid #dec717;
     }
+
     #buttonUpdateCar:hover{
         background: #800000;
     }
@@ -286,12 +286,13 @@
         background: #9b334e;
         position: absolute;
         left: 30%;
-        top: 66%;
+        top: 63%;
         width: 15%;
         height: 5%;
         font-size: 1.5vw;
         border-bottom:medium solid #dec717;
-        border-radius: 5px;
+        border-radius: 20px;
+        padding-bottom: 5px;
     }
     #buttonDeleteCar:hover{
         background: #800000;
@@ -299,13 +300,14 @@
     #buttonDeleteCar{
         background: #9b334e;
         position: absolute;
-        top: 72%;
+        top: 69%;
         left: 32%;
         width: 12%;
         height: 5%;
         font-size: 1.5vw;
         border-bottom:medium solid #dec717;
-        border-radius: 5px;
+        border-radius: 20px;
+        padding-bottom: 5px;
     }
     #divAutoName{
         position: absolute;
@@ -360,10 +362,17 @@
 
     input[type=file]::-webkit-file-upload-button {
         border-bottom: medium solid #dec717;
-        border-radius: 5px;
+        border-radius: 20px;
         background-color: #9b334e;
     }
     input[type=file]::-webkit-file-upload-button:hover {
         background-color: #800000;
+    }
+
+    .footer{
+        position: absolute; !important;
+        bottom: 0%; !important;
+        width: 100%; !important;
+        height: 4em; !important;
     }
 }
