--- a/Code/EasyLease/src/main/webapp/user/homePageJSP.css
+++ b/Code/EasyLease/src/main/webapp/user/homePageJSP.css
@@ -8,14 +8,14 @@
     list-style: none;
 }
 
-img{
+.CarImg{
     max-width: 100%;
     max-height: 90%;
 }
 
 .flex>.obj {
     padding: 0;
-    width: 34%;
+    width: 30%;
     height: auto;
     margin: 0px;
     margin-bottom:2%;
@@ -26,6 +26,15 @@ img{
     text-align: center;
 }
 
+.flex>.obj:hover{
+    border: 20px solid #9b334e;
+}
+
+.carInfo{
+    font-family: sans-serif;
+    font-size: 1.1em;
+    margin-bottom: 2%;
+}
 
 .customselect{
     float: left;
@@ -44,21 +53,27 @@ select{
     outline: none;
     background-color: #FFFFFF;
     border-radius: 0;
-    margin-right: 1%;
-    margin-left: 1%;
     width: 20%;
-    padding: 0.9em 3.5em 0.9em 0.9em;
-    font-size: 0.9em;
+    padding: 0.9em 3.5em 0.9em 0.9em !important;
+    font-size: 14px !important;
     color: black;
 }
 
+
+.selectpicker{
+    margin-left:3%;
+    margin-right: 1%;
+}
+
 .cerca{
+    margin-left:3%;
     padding:1em 2em;
     background-color: #9B334E;
     font-family: sans-serif;
     border:none;
     border-radius: 2px;
     color: #FFFFFF;
+    font-size: 14px !important;
 }
 
 .link {
@@ -77,22 +92,82 @@ select{
     background-color:#D5D8DC;
 }
 
+.Ricerca{
+    margin-left:10%;
+}
+
 @media (max-width:900px) {
+    .flex>.obj {
+        padding: 0;
+        width: 60%;
+        height: auto;
+        margin: 0px;
+        margin-bottom:2%;
+        line-height: 1em;
+        color: black;
+        font-family:Verdana, sans-serif;
+        font-size: 1em;
+        text-align: center;
+    }
+
+    .selectpicker{
+        margin: 0;
+    }
 
     select {
         border: none;
         outline: none;
-        background-color: #fffaff;
         border-radius: 0;
         margin: 0;
         display: block;
         width: 100%;
-        padding: 0.4em 1.7em 0.4em 0.4em;
-        font-size: 0.4em;
+        font-size: 12px !important;
         color: black;
+    }
+
+    .cerca{
+        margin-left: 3%;
+        width: 93%;
+        font-size: 12px !important;
     }
 
     .link {
         font-size: 50%;
+    }
+
+    .Ricerca{
+        margin:0;
+    }
+}
+
+/*Image Slideshow's CSS*/
+.carLink>img{
+    padding-left:30%;
+    max-width: 100%;
+}
+p{
+    font-size:1.5em;
+}
+.carTitle{
+    font-size: 3em;
+    color:#9b334e;
+}
+.carousel-caption{
+    text-shadow: none;
+    left:43% !important;
+}
+.carousel-inner{
+    width: 80% !important;
+}
+@media (max-width:900px) {
+    .carousel-caption{
+        top:80% !important;
+    }
+    p{
+        font-size:1em;
+    }
+    .carTitle{
+        font-size: 1.8em;
+        color:#9b334e;
     }
 }
