Aggiornamento Control e View dopo il merge
Nell'attuale commit sono state svolte le seguenti azioni:
- Rimozione dell'aggiornamento della pickUpDate a seguito della decisione presa;
- Aggiunta del controllo (tramite aggiunta e successiva rimozione di un attributo in sessione, viene aggiunto nella servlet "EstimateStipulationView" e rimosso nella servlet "EstimateStipulation") per evitare il passaggio inverso a seguito della stipulazione di un preventivo;
- Aggiornamento delle JSP HistoryAdvisor, EstimateManagementAdvisor e OrderManagementAdvisor così da renderle responsive (e relativi file css).

--- a/Code/EasyLease/src/main/webapp/advisor/orderManagementAdvisorJSP.css
+++ b/Code/EasyLease/src/main/webapp/advisor/orderManagementAdvisorJSP.css
@@ -1,21 +1,23 @@
 .container{
     margin-top: 2% !important;
 }
+
 .car_name{
     font-size: 45px;
     font-weight: bold;
 }
 
-img, svg{
-    max-width: 700px !important;
-    max-height: 700px !important;
-    margin: auto !important;
-    display: block !important;
+.contract_link{
+    display: block;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .car_spec_text{
-    font-size: 45px;
+    font-size: 35px;
     font-weight: bold;
+    margin-top: 5% !important;
+    margin-bottom: 5% !important;
 }
 
 .car_spec td{
@@ -23,8 +25,10 @@ img, svg{
 }
 
 .car_optional_text{
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bold;
+    margin-top: 5% !important;
+    margin-bottom: 5% !important;
 }
 
 .car_optionals td{
@@ -42,6 +46,10 @@ img, svg{
 .price{
     font-size: 30px;
     font-weight: bold;
+}
+
+#price_section{
+    margin-top: 5% !important;
 }
 
 .btn-check:active+.btn-primary, .btn-check:checked+.btn-primary,
